convert java files to kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+        compile group: 'io.github.libktx', name: 'ktx-app', version: '1.9.8-b5'
+        compile group: 'io.github.libktx', name: 'ktx-graphics', version: '1.9.8-b5'
     }
 }
 
