added dummy zombie

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ project(":core") {
         compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
         compile group: 'io.github.libktx', name: 'ktx-app', version: '1.9.8-b5'
         compile group: 'io.github.libktx', name: 'ktx-graphics', version: '1.9.8-b5'
+        compile group: 'io.github.libktx', name: 'ktx-scene2d', version: '1.9.8-b5'
     }
 }
 
